<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mole Calendar</string>
    <string name="add_mole">Add Mole</string>
    <string name="mole_detail">Mole Details</string>
    <string name="no_moles">No moles tracked yet</string>
    <string name="add_first_mole">Add your first mole to start tracking</string>
    <string name="mole_location">Location</string>
    <string name="mole_description">Description</string>
    <string name="mole_size">Size (mm)</string>
    <string name="mole_color">Color</string>
    <string name="next_check_date">Next check date</string>
    <string name="take_photo">Take Photo</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="added_date">Added</string>
    <string name="last_checked">Last checked</string>
    <string name="photos">Photos</string>
    <string name="add_photo">Add Photo</string>
    <string name="select_date">Select Date</string>
    <string name="notification_title">Mole Check Reminder</string>
    <string name="notification_message">Time to check your mole: %s</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="reminder_interval">Reminder Interval</string>
    <string name="reminder_1_month">1 month</string>
    <string name="reminder_3_months">3 months</string>
    <string name="reminder_6_months">6 months</string>
    <string name="reminder_1_year">1 year</string>
    <string name="delete_confirmation">Are you sure you want to delete this mole?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="camera_permission_required">Camera permission is required to take photos</string>
    <string name="storage_permission_required">Storage permission is required</string>
</resources>
